tests/contextual_typing/contextual_typing.exp
Error ----------------------------------------------------------------------------------------------------- test.js:10:9

Internal error: unconstrained tvar during tvar resolution

   10|   f2 = (b) => (b: string); // ok
               ^



Found 1 error
